# AutoCOD-Manager

./: .gitignore  GUIDE.md  LOGIC_BUSSINESS.md  LOGIC_BUSSINESS.txt  README.md  Request.md  WORKFLOW_PAGE.md  _task_head_snapshot.js  api_keys.limits.json  cod_app_sync.py  config.yaml  install_clipper.py  logs  main.py  mock_db_insert.py  pyproject.toml  refactor_sleep.py  release.md  requirements.txt  test_workflow_apis.py  update.md  walkthrough.md
.codex/environments/: environment.toml
DOCS/: ACCOUNT_PAGE.md  LIVE_UPDATE.md  STATE_DETECTOR_API.md  WEBSOCKET.md
DOCS/ACCOUNT_UI/: Improve_workflow.md  UI_REVIEW.md  account-profile-detail.html  acoount_ui_spec.md  add-edit-account-modal.html
DOCS/ARCHIVED/: acoount_ui_spec.md  brainstorm_workflow_v3.md.resolved  response.md  smart_wait_design.md  workflow-redesign.html  workflow_monitor_tab_design.md
DOCS/IDEAS/: workflow-builder.html
DOCS/Notes/: Database-Account.md  FullScan-Database.md  TODO.md  account_schedule_design.md  resolve.md.resolved  resolveV2.md.resolved  workflow_kpi_checklist.md
DOCS/TASKS/: README.md  REQUEST.md  TASK_PAGE_API.md  implementation_plan.md
DOCS/WORKFLOWS/: MONITOR_TAB.md  (+15 more)
Improve/: FEATURES_REQUEST_SPEC.md
QA/: QA_REPORT.md.resolved  QA_SKILL.md  SPEC_CHECKLIST.md  monitor_page_bug_report.md
SAMPLE/: App.tsx  README.md  index.html  metadata.json  package.json  types.ts
UI_DESIGN_SKILL/: README.md
backend/: Workflow_structure.md.resolved  __init__.py  api.py  config.py  websocket.py
data/: cod_manager.db
frontend/: index.html  loading.html
merge/: MERGE_GUIDE.py
(+163 files in other folders)
